2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewOverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs,
	  Gui/NRefactoryDocumentMetaInformation.cs,
	  Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
	  Gui/ResolveVisitor.cs, Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpAmbience.cs, Parser/DomParser.cs, CSharpAmbience.cs:
	  Worked on code completion/new dom.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs, Gui/CSharpTextEditorExtension.cs:
	  Track API.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/CSharpCompilerParameters.cs: Moved serialization engine to
	  MonoDevelop.Core. Use new syntax for specifying attribute scope.

2008-07-17  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.

2008-07-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed bug in ctrl+space completion
	  data.

2008-07-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: some bugfixes.

2008-07-16  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
	  Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: Added xml documentation
	  support/bugfixes.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/NewCSharpExpressionFinder.cs,
	  Gui/CSharpTextEditorCompletion.cs: Worked on 'new' completion.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Parser/DomParser.cs: Fixed namespace resolve
	  bug.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: Fixed possible null reference exception.

2008-07-14  Mike Krüger <mkrueger@novell.com> 
