@@ -1,3 +1,10 @@
+2008-07-28  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/NRefactoryDocumentMetaInformation.cs, Gui/ResolveVisitor.cs,
+	  Parser/Parser.cs, Parser/CodeGenerator.cs, Parser/TypeVisitor.cs,
+	  Parser/LanguageItemVisitor.cs: Some changes that make the
+	  csharpbinding compile with the new nrefactory.
+
 2008-07-27  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/NewOverrideCompletionData.cs, Gui/CSharpTextEditorCompletion.cs,
